# session3dservice

./: .gitignore  README.md  pom.xml  pyproject.toml
server3d/: .env  vtk_server.py
server3d/cone/: vtk_protocol.py  vtk_server.py
server3d/model/: colormap.py  presets.py
server3d/protocol/: vtk_protocol.py
server3d/tools/cropping/: crop_freehand.py  utils.py
server3d/tools/measurement/: angle_measurement.py  length_measurement.py  utils.py
server3d/tools/panning/: panning.py
server3d/utils/: utils.py
src/main/java/com/saolasoft/websocket/: WebsocketApplication.java
src/main/java/com/saolasoft/websocket/api/: Session3dAPI.java
src/main/java/com/saolasoft/websocket/base/response/: APIResponse.java  APIResponseHeader.java  APIResponseStatus.java  BaseAPIResponse.java  BaseAPIResponseHeader.java
src/main/java/com/saolasoft/websocket/config/: AppConfigProperties.java  ConfigProperties.java  WebSocketConfig.java
src/main/java/com/saolasoft/websocket/config/model/: ResourceProperty.java  ViewerProperty.java
src/main/java/com/saolasoft/websocket/session3d/dto/: Session3dDtoCreate.java  Session3dDtoGet.java
src/main/java/com/saolasoft/websocket/session3d/model/: Resource3d.java  Session3d.java
src/main/java/com/saolasoft/websocket/session3d/repository/: Session3dRepository.java
src/main/java/com/saolasoft/websocket/ws/: IncomingWebSocketSession.java  WebSocketHandler.java  WsClient.java
src/main/resources/: application.properties
src/main/resources/static/: index.html
src/test/java/com/saolasoft/websocket/: WebsocketApplicationTests.java
(+4 files in other folders)
